--- a/src/app/components/dialogs/clean-dialog/clean-dialog.component.html
+++ b/src/app/components/dialogs/clean-dialog/clean-dialog.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title>Purger le contenu</h2>
-<mat-dialog-content>Êtes vous sûr de vouloir purger le contenu de cette tuile {{data}} ?</mat-dialog-content>
+<h2 mat-dialog-title>Effacer le contenu</h2>
+<mat-dialog-content>Êtes vous sûr de vouloir effacer le contenu de cette tuile {{data}} ?</mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Non</button>
     <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Oui</button>
