--- a/src/app/pieces/tasks/random-event/random-event.component.html
+++ b/src/app/pieces/tasks/random-event/random-event.component.html
@@ -6,24 +6,36 @@
     <div class="piece-attach piece-attach-right" [style.background]="task.supplementaryRole ? task.supplementaryRole.color : 'var(--piece-background-color)'"></div>
 
     <div class="piece-menu" [class]="displayMenu">
-        <mat-icon fontIcon="arrow_back_ios" (click)="moveTask('left')" *ngIf="canMoveTo('left')"
-        matTooltip="Décaler la tuile vers la gauche."
-        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
-        <mat-icon fontIcon="expand_less" (click)="moveTask('top')" *ngIf="canMoveTo('top')"
-        matTooltip="Décaler la tuile vers le haut."
-        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
         <mat-icon fontIcon="backspace" (click)="onClickErase()"
         matTooltip="Effacer le contenu de cette tuile."
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
         <mat-icon fontIcon="delete" (click)="onClickDelete()"
         matTooltip="Supprimer la tuile."
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
-        <mat-icon fontIcon="expand_more" (click)="moveTask('bottom')" *ngIf="canMoveTo('bottom')"
-        matTooltip="Décaler la tuile vers le bas."
-        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
-        <mat-icon fontIcon="arrow_forward_ios" (click)="moveTask('right')" *ngIf="canMoveTo('right')"
-        matTooltip="Décaler la tuile vers la droite."
-        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
+        <div class="piece-menu-directioncross">
+            <div class="piece-menu-directioncross-left">
+                <mat-icon style="transform: rotate(0turn) scale(0.6);" fontIcon="arrow_back_ios" (click)="moveTask('left')"
+                matTooltip="Décaler la tuile vers la gauche."
+                matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>                
+            </div>
+            <div class="piece-menu-directioncross-updownarrows">
+                <div class="piece-menu-updownarrows-up">
+                    <mat-icon style="transform: rotate(0.25turn) scale(0.6);" fontIcon="arrow_back_ios" (click)="moveTask('top')"
+                    matTooltip="Décaler la tuile vers le haut."
+                    matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>                
+                </div>
+                <div class="piece-menu-directioncross-updownarrows-down">
+                    <mat-icon style="transform: rotate(0.75turn) scale(0.6);" fontIcon="arrow_back_ios" (click)="moveTask('bottom')"
+                    matTooltip="Décaler la tuile vers le bas."
+                    matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
+                </div>
+            </div>
+            <div class="piece-menu-directioncross-right">
+                <mat-icon style="transform: rotate(0.5turn) scale(0.6);" fontIcon="arrow_back_ios" (click)="moveTask('right')"
+                matTooltip="Décaler la tuile vers la droite."
+                matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
+            </div>
+        </div>
     </div>
 
     <div class="piece-symbolchoice" [class]="displaySymbolChoice">
