--- a/src/app/pieces/tasks/task/task.component.scss
+++ b/src/app/pieces/tasks/task/task.component.scss
@@ -8,7 +8,7 @@
 
     &-menu {
         position: absolute;
-        width: 200px;
+        width: 220px;
         height: 50px;
         background-color: #f7f7f7;
         z-index: -1;
@@ -21,7 +21,7 @@
         border: solid black 1px;
         display: flex;
         padding: 15px 20px 15px 20px;
-        justify-content: space-around;
+        justify-content: space-between;
 
         mat-icon {
             cursor: pointer;
@@ -40,6 +40,24 @@
         &-changeMenuButton:hover {
             opacity: 0.75;
         }
+
+        &-directioncross {
+            display: flex;
+            flex-direction: row;
+
+            &-updownarrows {
+                display: flex;
+                flex-direction: column;
+                position: relative;
+                top: -10px;
+
+                &-down {
+                    position: relative;
+                    top: -8px;
+                }
+            }            
+        }
+
     }
 
     &-menu.show {
